# jsonsettle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  demo.yml  publish-npm.yml  publish-pypi.yml
benchmarks/: README.md  certainty_latency.ts  compare.ts  fixtures.ts  graph.ts  memory.ts  run.ts
demo/: index.html
python/: README.md  pyproject.toml
python/src/jsonsettle/: __init__.py  parser.py  pydantic_ext.py
python/src/streamjson/: parser.py  pydantic_ext.py  types.py
python/tests/: test_async.py  test_parser.py  test_pydantic.py
src/: index.ts
src/adapters/: react.ts  vanilla.ts  vue.ts
src/core/: parser.ts  types.ts
src/schema/: zod.ts
tests/: adapters.vanilla.test.ts  edge.test.ts  parser.test.ts  zod.test.ts
tests/integration/: _python_runner.py  _setup.ts  adversarial.test.ts  anthropic.real.test.ts  certainty.integration.test.ts  openai.real.test.ts  python.compat.test.ts  schema.integration.test.ts
