[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonsettle"
version = "0.1.0"
description = "Schema-aware streaming JSON parser for LLMs. Know which fields are certain vs streaming — token by token."
readme = "README.md"
authors = [{ name = "Bhuvan Prakash" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["llm", "streaming", "json", "openai", "anthropic", "pydantic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
dev = ["pytest", "pytest-asyncio", "pydantic>=2", "hatchling"]

[project.urls]
Homepage = "https://github.com/bhuvanprakash/jsonsettle"
Repository = "https://github.com/bhuvanprakash/jsonsettle"
"Bug Tracker" = "https://github.com/bhuvanprakash/jsonsettle/issues"

[tool.hatch.version]
path = "src/jsonsettle/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/jsonsettle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
